clusters/production/infrastructure/network/gateway/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      l2.cilium.io/ip-pool: first-pool
  addresses:
    - type: IPAddress
      value: 10.0.70.150
  listeners:
    # HTTPS for wildcard subdomains
    - protocol: HTTPS
      port: 443
      name: https-wildcard
      hostname: "*.mill3r.la"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-mill3r-la-tls
      allowedRoutes:
        namespaces:
          from: All
    
    # HTTPS for apex domain
    - protocol: HTTPS
      port: 443
      name: https-apex
      hostname: mill3r.la
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-mill3r-la-tls
      allowedRoutes:
        namespaces:
          from: All
    
    # HTTP for redirect to HTTPS
    - protocol: HTTP
      port: 80
      name: http-redirect
      hostname: "*.mill3r.la"
      allowedRoutes:
        namespaces:
          from: All
